--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Builder.io - Figma to HTML, React, and more",
+  "name": "Figma AI Copilot",
   "id": "747985167520967365",
   "api": "1.0.0",
   "main": "dist/code.js",
