--- a/package.json
+++ b/package.json
@@ -58,7 +58,11 @@
   "dependencies": {
     "@amplitude/analytics-browser": "^1.2.0",
     "@emotion/core": "^10.0.28",
+    "@fluentai/react-copilot": "^0.6.0",
+    "@fluentui-contrib/react-chat": "^0.1.6",
     "@fluentui/react": "^8.109.3",
+    "@fluentui/react-components": "^9.31.0",
+    "@fluentui/react-icons": "^2.0.215",
     "@types/lodash": "^4.14.168",
     "@types/pako": "^1.0.1",
     "azure-openai": "^0.9.4",
