--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Copilot for UI",
+  "name": "Microsoft Muse",
   "id": "747985167520967365",
   "api": "1.0.0",
   "main": "dist/code.js",
